--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,17 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.2.6 <4.0.0'
 
+#--------------- PACKAGES ---------------#
+
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.2
+
+  # Utility Packages
+
+
+#----------------------------------------#
 
 dev_dependencies:
   flutter_test:
