Added and Updated utils

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,17 +5,30 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
+  sdk: '>=3.3.3 <4.0.0'
 
 #--------------- PACKAGES ---------------#
 
 dependencies:
   flutter:
     sdk: flutter
+
+  # Icons
+
   cupertino_icons: ^1.0.2
 
   # Utility Packages
 
+  http: ^1.2.1
+  logger: ^2.2.0
+  url_launcher: ^6.2.5
+  intl: ^0.19.0
+
+  # State Management
+
+  flutter_bloc: ^8.1.5
+  get: ^4.6.6
+  get_storage: ^2.1.1
 
 #----------------------------------------#
 
