--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,14 @@ dependencies:
   logger: ^2.2.0
   url_launcher: ^6.2.5
   intl: ^0.19.0
+  flutter_native_splash: ^2.4.0
+  smooth_page_indicator: ^1.1.0
 
   # State Management
 
   flutter_bloc: ^8.1.5
+  bloc: ^8.1.4
+  equatable: ^2.0.5
   get: ^4.6.6
   get_storage: ^2.1.1
 
@@ -44,6 +48,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/images/on_boarding_images/
     - assets/logos/
 
   fonts:
